intTests/test_saw_import/testFail3.log.good
Loading file "testFail3.saw"
testFail3.saw:1:17-1:18: Error: Syntax error: missing ')'
FAILED
