intTests/test_saw_import/testFail3.saw
import "A.cry" (,x2);
